# BC250-USB-Controller-Poweron

./: .gitignore  README.md  build-esp32s2.sh  build.sh
firmware/: CMakeLists.txt  README.md  build.sh  platformio.ini
firmware-esp32s2/: README.md  build.sh  platformio.ini
firmware-esp32s2/src/: main.cpp
firmware/src/: main.c  power_ctrl.c  power_ctrl.h  tusb_config.h  usb_host.c  usb_host.h
hardware/: BOM.md  README.md
tools/: analyze_hid_pattern.py  capture_hid_reports.py  detect_wakeup_live.py
